# coursework-wust

./: .gitattributes  .gitignore  .gitmodules  README.md  pylintrc.toml  test.sh
.github/workflows/: aisd-test.yml  ci-cpp.yml  ci-java.yml  ci-python.yml  pylint.yml
aisd/: README.md  test.sh
aisd/dsaa.ex02/: ArrayList.java  ArrayListListIteratorTest.java  OneWayLinkedListWithHead.java  OneWayLinkedListWithHeadIteratorTest.java
aisd/dsaa.ex03/: ArrayQueue.java  ArrayStack.java  IStackReversible.java  Josephus.java  JosephusTest.java  ListQueue.java  ListStack.java  ReversibleArrayStack.java  ReversibleArrayStackReversible.java  ReversibleArrayStackTest.java  StackQueue.java  StackQueueTest.java  TwoWayCycledListWithSentinel.java  VelosoStack.java  VelosoStackTest.java
aisd/dsaa.lab01/: Drawer.java
aisd/dsaa.lab02/: Document.java  Link.java  Main.java
aisd/dsaa.lab03/: Document.java  Link.java  Main.java  TwoWayUnorderedListWithHeadAndTail.java
aisd/dsaa.lab04/: Document.java  Link.java  Main.java  TwoWayCycledOrderedListWithSentinel.java
aisd/dsaa.lab05/: Document.java  Main.java  TwoWayCycledOrderedListWithSentinel.java
aisd/dsaa.lab06/: Document.java  Link.java  TwoWayCycledOrderedListWithSentinel.java
aisd/dsaa.lab07/: Document.java  HashTable.java  IWithName.java  TwoWayCycledOrderedListWithSentinel.java
aisd/dsaa.lab08/: BST.java  IWithName.java  Link.java  Main.java
aisd/dsaa.lab09/: DisjointSetDataStructure.java  DisjointSetForest.java  DisjointSetLinkedList.java  Main.java
aisd/dsaa.lab10/: DisjointSetDataStructure.java  DisjointSetForest.java  Document.java  Graph.java  Link.java  Main.java
aisd/dsaa.lab11/: DisjointSetDataStructure.java  Document.java  Graph.java  Graph2.java  IWithName.java  Main.java
aisd/dsaa.lab12/: Automaton.java  KMP.java  LinesReader.java  Main.java
aisd/dsaa.lab13/: ConvexHull.java  Point.java  PointsReader.java
aisd/dsaa.list03/: ArrayQueue.java
aisd/dsaa.list07/: BinarySearchTree.java  DuplicateElementException.java  IExecutor.java  IntegerToStringExec.java
aisd/dsaa.util/: AbstractList.java  Common.java  EmptyQueueException.java  FullQueueException.java  IList.java  IQueue.java  IStack.java
aisd/samples-L01/: 1.ans
aisd/samples-L02/: 1.ans
aisd/samples-L04/: 2.in  3.ans  3.in  4.ans  4.in  6.ans  6.in  7.ans  7.in
aisd/samples-L05/: 2.ans  2.in
aisd/samples-L07/: 1.ans
aisd/samples-L08/: 1.ans
aisd/samples-L09/: 1.in
aisd/samples-L10/: 1.ans  2.ans  2.in  3.ans  4.in  5.in  6.ans  7.ans  7.in
aisd/samples-L11/: 1.ans  3.in  4.ans  4.in  5.in
aisd/samples-L12/: 1.ans  2.ans  2.in  3.in
ak/: README.md  demo_2025.asm
ak/ex01/: mips1.asm
ak/ex02/: mips1.asm
ak/ex03/: rng.asm
ak/ex04/: stack.asm  stack.asm.bak
ak/ex05/: tictactoe.asm
am2/: README.md
bd/lab/: AGENTS.md  create_tables.sql
bd/project/: generate_erd_diagrams.py
dsaa.lab01/: Document.java  Drawer.java  Main.java
dsaa.lab02/: IList.java  Link.java  Main.java  OneWayLinkedList.java
jp/: README.md  download-homework.sh  notes-template.md
jp/lesson-02/: notes.md  solution.txt
jp/lesson-03/: solution.txt
jp/lesson-04/: homework.txt  notes.md  solution.txt
jp/lesson-05/: homework.txt  notes.md  solution.txt
jp/lesson-07/: notes.md
jp/lesson-08/: notes.md
jp/lesson-09/: notes.md
jp/lesson-1/: solution.txt
jp/lesson-10/: notes.md  solution.txt
jp/lesson-11/: homework.txt  notes.md  solution.txt
jp/lesson-12/: notes.md  solution.txt
jp/lesson-13/: notes.md  solution.txt
jp/lesson-14/: homework.txt  notes.md  solution.txt
jp/lesson-15/: notes.md  solution.txt
js/: pyproject.toml  requirements.txt
js/lab04/: tail.py  (+2 more)
logic/: README.md
msid/: README.md
pio/: README.md
pp/: README.md
rpis/: README.md
samples-L02/: 1.in
sysop/: README.md  requirements.txt
tep/: AGENTS.md  CMakeLists.txt  README.md
tep/lab1/: Zad1.cpp  Zad2.cpp  Zad3.cpp  Zad4.h  modyfikacja.cpp  zad1.cpp  zad2.cpp  zad2.h  zad3.h  zad4.cpp
tep/lab2/: Base256Number.cpp  Base256Number.h  Base256NumberSandbox.cpp  Base256NumberTests.cpp  Number.cpp  Number.h  NumberSandbox.cpp  NumberTests.cpp  modyfikacja.cpp  test.cpp  tester.cpp  zad1.cpp
tep/lab3/: ExpressionNode.cpp  ExpressionNode.h  ExpressionParser.cpp  ExpressionTree.cpp  ExpressionTree.h  Operation.h
tep/lab4/: AltLinkList.h  AltLinkListNode.h  Error.cpp  Error.h  ExpressionNode.h  ExpressionParser.cpp  Result.h  ResultWriter.cpp  ResultWriter.h  zad2.cpp  zad4.cpp
tep/lab5/: Error.cpp  ExpressionNode.cpp  ExpressionTree.cpp  ExpressionTree.h  SingleSmartPointer.h  SmartPointer.h  livecoding.cpp  tree_test.cpp  zad4.cpp  zad5.cpp
tep/miniprojekt/: Evaluator.cpp  Evaluator.hpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  Individual.hpp  LcVRPContest.cpp  Optimizer.cpp  Optimizer.hpp  ProblemData.cpp  ProblemData.hpp  ProblemLoader.cpp  ProblemLoader.hpp
(+587 files in other folders)
